@@ -1,3 +1,12 @@
+2008-09-16 Jens Tkotz <jens@peino.de> 1.5.9-svn-b30
+
+ * Fix: Little last minute fix ;-)
+        Comment indication was enabled anytime on mainpage.
+
+ * Fix: Some wordings.
+
+   Thanks Julien.
+   
 2008-09-16 Jens Tkotz <jens@peino.de> 1.5.9-svn-b29
 
  * Manifest updates etc.
